# agentverk

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  build.rs  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: agent-ergonomics.md  config.md  json-schema.md  remote-ide.md  repo-access.md
examples/claude/: agv.toml
examples/codex/: agv.toml
examples/gemini/: agv.toml
examples/gui/: agv.toml
examples/openclaw/: agv.toml
examples/repo-checkout/: .env.example  agv.toml
scripts/: release-check.sh
skills/agv/: SKILL.md
src/: cli.rs  config.rs  dirs.rs  doctor.rs  error.rs  forward.rs  forward_daemon.rs  gui.rs  idle_watcher.rs  image.rs  init.rs  interactive.rs  lib.rs  locks.rs  main.rs  manual_steps.rs  resources.rs  ssh.rs  ssh_config.rs  template.rs
src/images/: claude.toml  codex.toml  debian-12.toml  devtools.toml  docker.toml  fedora-43.toml  gemini.toml  gh.toml  gui-xfce.toml  mod.rs  nodejs.toml  oh-my-zsh.toml  openclaw.toml  rust.toml  ssh-key.toml  ubuntu-24.04.toml  uv.toml  zsh.toml
src/specs/: large.toml  medium.toml  mod.rs  small.toml  xlarge.toml
src/vm/: cloud_init.rs  forwarding.rs  instance.rs  mod.rs  provision.rs  qemu.rs  system_info.rs  template.rs
tests/: cli_test.rs  create_test.rs  qemu_test.rs
