[package]
name = "agv"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Create and manage QEMU VMs for AI coding agents"
license = "MIT"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "fs", "net", "sync", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.release]
lto = true
codegen-units = 1
strip = true
